fixes #9 partially removes some code spacing/bracket issues of new updates do not include variables all over in every file, it's just required in main file updates dev dependencies updates README.md updates CONTRIBUTION.md removes extra file from gulp task runner updates .gitignore gulp now compiles both minified and non-minified versions for production

--- a/src/components/_alert.scss
+++ b/src/components/_alert.scss
@@ -1,16 +1,33 @@
 div.alert {
-  width: 100%;
-  text-align: left;
-  border-radius: 0.1em;
-  padding: 1px 1px 1px 1px;
+  min-height: 50px;
+  border-radius: 0.5em;
+  padding: 15px;
+  margin-bottom: 20px;
+  color: white;
 
   &.info {
-    background-color: #007bff;
-    color: white;
+    background-color: $info;
   }
 
-  > p > span {
-    font-weight: bold;
-    font-size: 20px;
+  &.success {
+    background-color: $success;
+  }
+
+  &.warning {
+    background-color: $warning;
+  }
+
+  &.error {
+    background-color: $error;
+  }
+}
+
+span.close {
+  float: right;
+  font-weight: bold;
+  cursor: pointer;
+
+  &:hover {
+    color:$black;
   }
 }
