--- a/src/components/_button.scss
+++ b/src/components/_button.scss
@@ -1,63 +1,63 @@
 button.button {
   cursor: pointer;
   padding: 12px 18px;
-  background-color: white;
+  background-color: $white;
   border-style: solid;
-  border-color: black;
+  border-color: $black;
   font-size: 15px;
   border-radius: 0.5rem;
-  color: black;
+  color: $black;
 
   &:hover {
     transition: background-color 0.1s, color 0.1s;
-    background-color: black;
-    color: white;
+    background-color: $black;
+    color: $white;
   }
 
   &.info {
-    color: #007bff;
-    border-color: #007bff;
+    color: $info;
+    border-color: $info;
 
     &:hover {
-      background-color: #007bff;
-      color: white;
+      background-color: $info;
+      color: $white;
     }
   }
 
   &.success {
-    color: #28a745;
-    border-color: #28a745;
+    color: $success;
+    border-color: $success;
 
     &:hover {
-      background-color: #28a745;
-      color: white;
+      background-color: $success;
+      color: $white;
     }
   }
 
   &.warning {
-    color: #ffc107;
-    border-color: #ffc107;
+    color: $warning;
+    border-color: $warning;
 
     &:hover {
-      background-color: #ffc107;
-      color: white;
+      background-color: $warning;
+      color: $white;
     }
   }
 
   &.danger {
-    color: #dc3545;
-    border-color: #dc3545;
+    color: $error;
+    border-color: $error;
 
     &:hover {
-      background-color: #dc3545;
-      color: white;
+      background-color: $error;
+      color: $white;
     }
   }
 
   &.shadow {
-    box-shadow: 3px 3px #888888;
+    box-shadow: 3px 3px $medium-gray;
 
-    &:hover{
+    &:hover {
       box-shadow: 0 0;
     }
   }
@@ -72,5 +72,64 @@ button.button {
 
   &.large {
     padding: 24px 36px;
+  }
+}
+
+button.button.filled {
+  background-color: $black;
+  color: $white;
+
+  &:hover {
+    transition: background-color 0.1s, border-color 0.1s;
+    background-color: $dark-gray;
+    border-color: $dark-gray;
+  }
+
+  &.info {
+    background-color: $info;
+    border-color: $info;
+
+    &:hover {
+      background-color: $info-dark;
+      border-color: $info-dark;
+    }
+  }
+
+  &.success {
+    background-color: $success;
+    border-color: $success;
+
+    &:hover {
+      background-color: $success-dark;
+      border-color: $success-dark;
+    }
+  }
+
+  &.warning {
+    background-color: $warning;
+    border-color: $warning;
+
+    &:hover {
+      background-color: $warning-dark;
+      border-color: $warning-dark;
+    }
+  }
+
+  &.danger {
+    background-color: $error;
+    border-color: $error;
+
+    &:hover {
+      background-color: $danger-dark;
+      border-color: $danger-dark;
+    }
+  }
+
+  &.shadow {
+    box-shadow: 3px 3px $light-gray;
+
+    &:hover {
+      box-shadow: 0 0;
+    }
   }
 }
